# srvr

./: .aider.conf.yml  .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONVENTIONS.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  prometheus.yml  webdriver.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
assets/: default_screen.svg.liquid  tailwind.css
docs/: architecture.md  database.md  development-process.md  frontend.md  migrations.md  models.md  server-functions.md  setup.md  templates.md  testing.md
docs/projects/: state.md
docs/projects/completed/: 20260624-hmac-signing.md  20260628-ai-friendly-docs.md  20260628-frontend-test-harness.md  20260628-prometheus-range-query.md  ai-friendly-docs.md  appstore-refactor.md  virtual-device-preview.md
docs/projects/ideas/: ai-template-generation.md  csr-rpc-conversion.md  frontend-test-harness.md  prometheus-graph-rendering.md  prometheus-time-range-query.md
docs/projects/plans/: frontend-test-harness.md  prometheus-range-query.md
migrations/: 20260221000000_create_devices.sql  20260221071938_create_templates.sql  20260222055231_create_prometheus_data_source.sql  20260227022405_optional_width_height.sql  20260227030000_create_device_logs.sql  20260316000000_multi_template_support.sql  20260317000000_add_maximum_compatibility.sql  20260318000000_fix_device_logs_fk.sql  20260326000000_create_users.sql  20260328000000_create_http_sources.sql  20260628000000_create_range_queries.sql
migrations/2025_01_01_000000_create_devices/: up.sql
src/: app.rs  auth.rs  data_sources.rs  db.rs  hmac.rs  lib.rs  main.rs  models.rs  renderer.rs  schema.rs  state.rs  time.rs  tls.rs
src/device/: api.rs  image.svg.liquid  liquid_filters.rs  mod.rs  renderer.rs
src/frontend/: mod.rs  server_fns.rs  store.rs  test_harness.rs
src/frontend/components/: nav.rs
src/frontend/pages/: api_info.rs  dashboard.rs  devices.rs  login.rs  mod.rs  screen_preview.rs  setup.rs  template_editor.rs  templates.rs  users.rs
src/frontend/pages/template_editor/: http_sources.rs  mod.rs  prometheus_queries.rs  range_queries.rs  template_form.rs  template_preview.rs  template_variables.rs
src/models/: mod.rs  server.rs
