[package]
name = "srvr"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:resvg",
    "dep:usvg",
    "dep:tiny-skia",
    "dep:liquid",
    "dep:prometheus-http-query",
    "dep:axum-prometheus",
    "dep:thiserror",
    "dep:image",
    "dep:chrono",
    "dep:diesel",
    "dep:diesel_migrations",
    "dep:diesel-async",
]

[dependencies]
# Shared (both SSR and WASM)
leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SSR-only
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }
liquid = { version = "0.26", optional = true }
prometheus-http-query = { version = "0.8", optional = true }
axum-prometheus = { version = "0.10.0", optional = true }
thiserror = { version = "2.0.18", optional = true }
image = { version = "0.25", optional = true }
diesel = { version = "2", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"], optional = true }
diesel_migrations = { version = "2", optional = true }
diesel-async = { version = "0.5", features = ["sqlite"], optional = true }

# Hydrate-only
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[package.metadata.leptos]
output-name = "srvr"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "0.0.0.0:8080"
reload-port = 3001
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-default-features = false
lib-default-features = false
tailwind-input-file = "style/input.css"
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
