[package]
name = "srvr"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
base64 = "0.22"

# Server-only dependencies (not WASM-compatible)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["sync", "macros"]}
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }
liquid = { version = "0.26", optional = true }
liquid-core = { version = "0.26", optional = true }
prometheus-http-query = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
axum-prometheus = { version = "0.10.0", optional = true }
thiserror = { version = "2.0.18", optional = true }
image = { version = "0.25", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"], optional = true }
itertools = {version = "0.14.0", optional = true}
chrono-tz = {version="0.10.4", optional=true}
names = {version="0.14.0", optional=true}
qrcode = { version = "0.14.1", optional = true }
argon2 = { version = "0.5", features = ["std"], optional = true }
axum-login = { version = "0.18", optional = true }
tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"], optional = true }
tokio-stream = { version = "0.1", optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
rustls-acme = { version = "0.15", features = ["axum"], optional = true }
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent", "Event"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
web = ["dioxus/web", "dep:web-sys", "dep:wasm-bindgen"]
server = [
    "dioxus/server",
    "tokio/full",
    "dep:axum",

    "dep:tower",
    "dep:tower-http",
    "dep:tracing-subscriber",
    "dep:resvg",
    "dep:usvg",
    "dep:tiny-skia",
    "dep:liquid",
    "dep:liquid-core",
    "dep:prometheus-http-query",
    "dep:reqwest",
    "dep:axum-prometheus",
    "dep:thiserror",
    "dep:image",
    "dep:sqlx",
    "dep:itertools",
    "dep:chrono-tz",
    "dep:names",
    "dep:qrcode",
    "dep:argon2",
    "dep:axum-login",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "dep:tokio-stream",
    "dep:axum-server",
    "dep:rustls-acme",
]

